[package]
name = "voice_transformer"
version = "0.1.0"
edition = "2021"
authors = ["Tasdelenn"]
description = "Real-time voice processing tool with minimal latency"

[dependencies]
cpal = "0.15.2"  # Audio I/O
rodio = "0.17.3"  # Audio processing
clap = { version = "4.4.8", features = ["derive"] }  # CLI arguments
anyhow = "1.0.75"  # Error handling
rustfft = "6.1.0"  # FFT for audio processing
realfft = "3.3.0"  # Optimized FFT for real numbers
hound = "3.5.1"  # WAV file handling
crossterm = "0.27.0"  # Terminal control for visualization
num-complex = "0.4.4"  # Complex number support for FFT
warp = "0.3.6"  # Web server framework
tokio = { version = "1.0", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON serialization
tungstenite = "0.20.1"  # WebSocket support
tokio-tungstenite = "0.20.1"  # Async WebSocket
futures-util = "0.3"  # Futures utilities for async streams
